syntax = "proto3";

package master.v1;
option go_package = "eddisonso.com/go-gfs/gen/master;master";

// Build information
message BuildInfo {
    string build_id = 1;
    string build_time = 2;
}

// ChunkServer location info
message ChunkServerInfo {
    string server_id = 1;
    string hostname = 2;
    int32 data_port = 3;
    int32 replication_port = 4;
}

// Chunk location with primary indicator
message ChunkLocationInfo {
    string chunk_handle = 1;
    repeated ChunkServerInfo locations = 2;
    ChunkServerInfo primary = 3;
    uint64 version = 4;
    uint64 size = 5;  // Current size of chunk in bytes
}

// File metadata
message FileInfoResponse {
    string path = 1;
    repeated string chunk_handles = 2;
    uint64 size = 3;
    uint64 chunk_size = 4;
    string namespace = 5;
    int64 created_at = 6;   // Unix timestamp (seconds)
    int64 modified_at = 7;  // Unix timestamp (seconds)
}

// ============ Chunkserver -> Master RPCs ============

message RegisterRequest {
    string server_id = 1;
    string hostname = 2;
    int32 data_port = 3;
    int32 replication_port = 4;
    repeated string chunk_handles = 5;  // Chunks this server has
    BuildInfo build_info = 6;           // Build information
}

message RegisterResponse {
    bool success = 1;
    string message = 2;
}

message HeartbeatRequest {
    string server_id = 1;
    repeated string chunk_handles = 2;  // Current chunks on this server
}

message HeartbeatResponse {
    bool success = 1;
    repeated string chunks_to_delete = 2;  // Garbage collection
}

// Report successful chunk commit
message ReportCommitRequest {
    string server_id = 1;
    string chunk_handle = 2;
    uint64 size = 3;  // Bytes written
}

message ReportCommitResponse {
    bool success = 1;
    string message = 2;
}

// Lease renewal request from primary chunkserver
message RenewLeaseRequest {
    string server_id = 1;
    string chunk_handle = 2;
}

message RenewLeaseResponse {
    bool success = 1;
    string message = 2;
    uint64 lease_duration_ms = 3;  // Duration until lease expires (in milliseconds)
}

// Claim primary status at start of write operation
message ClaimPrimaryRequest {
    string server_id = 1;
    string chunk_handle = 2;
}

message ClaimPrimaryResponse {
    bool success = 1;
    string message = 2;
    uint64 lease_duration_ms = 3;  // Duration until lease expires (in milliseconds)
}

// ============ Client -> Master RPCs ============

message CreateFileRequest {
    string path = 1;
    string namespace = 2;
}

message CreateFileResponse {
    bool success = 1;
    string message = 2;
    FileInfoResponse file = 3;
}

message GetFileRequest {
    string path = 1;
    string namespace = 2;
}

message GetFileResponse {
    bool success = 1;
    string message = 2;
    FileInfoResponse file = 3;
}

message DeleteFileRequest {
    string path = 1;
    string namespace = 2;
}

message DeleteFileResponse {
    bool success = 1;
    string message = 2;
}

message DeleteNamespaceRequest {
    string namespace = 1;
}

message DeleteNamespaceResponse {
    bool success = 1;
    string message = 2;
    int32 files_deleted = 3;
}

message RenameFileRequest {
    string old_path = 1;
    string new_path = 2;
    string namespace = 3;
}

message RenameFileResponse {
    bool success = 1;
    string message = 2;
}

message ListFilesRequest {
    string prefix = 1;  // Optional path prefix filter
    string namespace = 2;
}

message ListFilesResponse {
    repeated FileInfoResponse files = 1;
}

// Request a new chunk for writing to a file
message AllocateChunkRequest {
    string path = 1;
    string namespace = 2;
}

message AllocateChunkResponse {
    bool success = 1;
    string message = 2;
    ChunkLocationInfo chunk = 3;
}

// Get chunk locations for reading
message GetChunkLocationsRequest {
    string path = 1;
    string namespace = 2;
}

message GetChunkLocationsResponse {
    bool success = 1;
    string message = 2;
    repeated ChunkLocationInfo chunks = 3;
}

// Chunkserver status
message ChunkServerStatus {
    ChunkServerInfo server = 1;
    int32 chunk_count = 2;           // Number of chunks on this server
    bool is_alive = 3;               // Whether server is responding to heartbeats
    BuildInfo build_info = 4;        // Build information
}

// Master service
service Master {
    // Chunkserver registration and heartbeat
    rpc Register(RegisterRequest) returns (RegisterResponse);
    rpc Heartbeat(HeartbeatRequest) returns (HeartbeatResponse);
    rpc ReportCommit(ReportCommitRequest) returns (ReportCommitResponse);
    rpc RenewLease(RenewLeaseRequest) returns (RenewLeaseResponse);
    rpc ClaimPrimary(ClaimPrimaryRequest) returns (ClaimPrimaryResponse);

    // File operations
    rpc CreateFile(CreateFileRequest) returns (CreateFileResponse);
    rpc GetFile(GetFileRequest) returns (GetFileResponse);
    rpc DeleteFile(DeleteFileRequest) returns (DeleteFileResponse);
    rpc DeleteNamespace(DeleteNamespaceRequest) returns (DeleteNamespaceResponse);
    rpc RenameFile(RenameFileRequest) returns (RenameFileResponse);
    rpc ListFiles(ListFilesRequest) returns (ListFilesResponse);

    // Chunk operations
    rpc AllocateChunk(AllocateChunkRequest) returns (AllocateChunkResponse);
    rpc GetChunkLocations(GetChunkLocationsRequest) returns (GetChunkLocationsResponse);
}
